<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="pocopref_title">POCO Extras</string>

	<!-- thermal Profiles -->
    <string name="thermal_profile_title">Thermal Profiles</string>
    <string name="thermal_title">Thermal Profiles</string>
    <string name="thermal_summary">Choose your thermal profile</string>
    <string name="thermal_dialogTitle">Choose your thermal profile</string>
	
    <!-- Battery -->
    <string name="boost_settings_title">Performance</string>
    <string name="boost_title">Interaction Boost</string>
    <string name="boost_summary">Boost values apply when thermal profiles are changed</string>	

    <string name="app_settings_category">Applications Settings</string>
    <string name="app_settings_title">Per-App Profiles</string>
    <string name="app_settings_summary">Choose per-app settings for Battery, Performance, Thermal, brightnes etc...</string>

</resources>
