<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  
    <PreferenceCategory
        android:key="thermal_profile"
        android:title="@string/thermal_profile_title" >

		<ListPreference
			android:key="thermal"
			android:title="@string/thermal_title"
			android:summary="@string/thermal_summary"
			android:defaultValue="0"
			android:entries="@array/thermal_profiles"
			android:entryValues="@array/thermal_values"
			android:dialogTitle="@string/thermal_dialogTitle" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="boost"
        android:title="@string/boost_settings_title" >
        <SwitchPreference
            android:key="interaction.boost"
            android:defaultValue="false"
            android:title="@string/boost_title"
            android:summary="@string/boost_summary" />
  </PreferenceCategory>

</PreferenceScreen>
